fixed image cutoff bug and slight padding on right side of page due to .container-fluid class

--- a/test.css
+++ b/test.css
@@ -2,6 +2,12 @@
     color: black;
 }
 
+.container-fluid, .row {
+    padding: 0px;
+    margin: 0px;
+    overflow-x: hidden;
+}
+
 div .jumbotron {
     background-image: url('congruent_pentagon_blue2.png');
     height: 400px;
@@ -13,17 +19,38 @@ h1 {
     text-decoration: underline;
 }
 
-h2 {
+.jumbotron h2 {
     text-decoration: overline;
 }
 
-p {
+section {
+    
+}
+
+
+.centerPBlock {
     font-size: medium;
     margin-bottom: 25px;
     margin-top: 25px;
     text-align: center;
     width: 100%;
     max-width: 600px;
+}
+
+ul {
+    list-style-position: inside;
+    text-align: none;
+    display: inline-block;
+    margin: auto;
+}
+
+li {
+    display: block;
+    margin: auto;
+}
+
+.center-text {
+    text-align: center;
 }
 
 img {
@@ -36,12 +63,17 @@ img {
     border-radius: 100%;
     border: 3px solid lightblue;
     box-shadow: 6px 6px 5px grey;
+    margin-bottom: 10px;
 }
 
 .container-fluid {
-    background-image: url('congruent_pentagon_blue2.png');
-    margin-top: 25px;
+    margin-top: 15px;
     color: black;
+}
+
+#thirdSection {
+    background-image: url('congruent_pentagon_blue2.png');
+    text-shadow: 2px 2px 4px LightSlateGray;
 }
 
 .appImg {
@@ -62,7 +94,7 @@ img {
 }
 
 .green-text-blur {
-    text-shadow: 2px 2px 4px LightSlateGray;
+    text-shadow: 2px 2px 4px gray;
 }
 
 
